--- a/src/main/resources/templates/admin/chartToday.html
+++ b/src/main/resources/templates/admin/chartToday.html
@@ -27,13 +27,13 @@
                 <div class="album py-3 px-2 bg-light">
                   <div class="row">
                       <div class="col-md-4">
-                        <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Quotes',guageDiv='guage_div_quotes',totalValue=${salesQuotesDaily},totalStyle='background-color: #00bfff;',targetValue=${salesQuotesTargetDaily},targetStyle='background-color: #ff85e6;',qtyValue=${salesQuotesQtyDaily}, qtyTarget=${salesQuotesTargetQtyDaily},avgValue=${averageDailyQuotes},avgTarget=${averageDailyQuotesTarget},avgProfitValue=${averageDailyQuotesProfit},avgProfitTarget=${averageDailyQuotesProfitTarget},targetAchieved=${targetAchievedQuotes},graphDiv='graph_div_quotes',totalValueGraphTop=${salesQuotesDaily},targetValueGraphTop=${salesQuotesTargetDaily},percentageOfTargetGraphTop=${targetAchievedQuotes},runRateGraphTop=${salesQuotesDaily},titleGraphTop='Quotes vs Target - Month to-Date')"></div>
+                        <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Quotes',guageDiv='guage_div_quotes',totalValue=${salesQuotesDaily},totalStyle='background-color: #00bfff;',targetValue=${salesQuotesTargetDaily},targetStyle='background-color: #ff85e6;',qtyValue=${salesQuotesQtyDaily}, qtyTarget=${salesQuotesTargetQtyDaily},avgValue=${averageDailyQuotes},avgTarget=${averageDailyQuotesTarget},avgProfitValue=${averageDailyQuotesProfit},avgProfitTarget=${averageDailyQuotesProfitTarget},targetAchieved=${targetAchievedQuotes},graphDiv='graph_div_quotes',totalValueGraphTop=${salesQuotesMTD},targetValueGraphTop=${salesQuotesTargetMonthly},percentageOfTargetGraphTop=${targetAchievedQuotesMTD},runRateGraphTop=${salesAvgQuotesMTD},titleGraphTop='Quotes vs Target - Month to-Date',totalTitleGrapghTop='Actual To-date',targetTitleGrapghTop='Target this month')"></div>
                       </div>
                       <div class="col-md-4">
-                        <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Orders',guageDiv='guage_div_orders',totalValue=${salesOrderedDaily},totalStyle='background-color: #f9ae06;', targetValue=${salesOrderedTargetDaily},targetStyle='background-color: #fff67e;color:black', qtyValue=${salesOrderedQtyDaily}, qtyTarget=${salesOrderedTargetQtyDaily},avgValue=${averageDailyOrders},avgTarget=${averageDailyOrdersTarget},avgProfitValue=${averageDailyOrdersProfit},avgProfitTarget=${averageDailyOrdersProfitTarget},targetAchieved=${targetAchievedOrders},graphDiv='graph_div_orders',totalValueGraphTop=${salesOrderedDaily},targetValueGraphTop=${salesOrderedTargetDaily},percentageOfTargetGraphTop=${targetAchievedOrders},runRateGraphTop=${salesOrderedDaily},titleGraphTop='Orders vs Target - Month to-Date')"> </div>
+                        <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Orders',guageDiv='guage_div_orders',totalValue=${salesOrderedDaily},totalStyle='background-color: #f9ae06;', targetValue=${salesOrderedTargetDaily},targetStyle='background-color: #fff67e;color:black', qtyValue=${salesOrderedQtyDaily}, qtyTarget=${salesOrderedTargetQtyDaily},avgValue=${averageDailyOrders},avgTarget=${averageDailyOrdersTarget},avgProfitValue=${averageDailyOrdersProfit},avgProfitTarget=${averageDailyOrdersProfitTarget},targetAchieved=${targetAchievedOrders},graphDiv='graph_div_orders',totalValueGraphTop=${salesOrderedMTD},targetValueGraphTop=${salesOrderedTargetMonthly},percentageOfTargetGraphTop=${targetAchievedOrdersMTD},runRateGraphTop=${salesAvgOrderedMTD},titleGraphTop='Orders vs Target - Month to-Date',totalTitleGrapghTop='Actual To-date',targetTitleGrapghTop='Target this month')"> </div>
                       </div>
                       <div class="col-md-4">
-                        <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Invoices',guageDiv='guage_div_invoices',totalValue=${salesInvoicedDaily},totalStyle='background-color: #0b4119;color:white;', targetValue=${salesInvoicedTargetDaily},targetStyle='background-color: #92edaa;color:black', qtyValue=${salesInvoicedQtyDaily}, qtyTarget=${salesInvoicedTargetQtyDaily},avgValue=${averageDailyOrders},avgTarget=${averageDailyOrdersTarget},avgProfitValue=${averageDailyInvoicesProfit},avgProfitTarget=${averageDailyInvoicesProfitTarget},targetAchieved=${targetAchievedInvoices},graphDiv='graph_div_invoices',totalValueGraphTop=${salesInvoicedDaily},targetValueGraphTop=${salesInvoicedTargetDaily},percentageOfTargetGraphTop=${targetAchievedInvoices},runRateGraphTop=${salesInvoicedDaily},titleGraphTop='Invoices vs Target - Month to-Date')"> </div>
+                        <div th:replace="admin/dashboardCardLayout :: cardFields(isFullScreen=${isFullScreen},cardTitle='Invoices',guageDiv='guage_div_invoices',totalValue=${salesInvoicedDaily},totalStyle='background-color: #0b4119;color:white;', targetValue=${salesInvoicedTargetDaily},targetStyle='background-color: #92edaa;color:black', qtyValue=${salesInvoicedQtyDaily}, qtyTarget=${salesInvoicedTargetQtyDaily},avgValue=${averageDailyOrders},avgTarget=${averageDailyOrdersTarget},avgProfitValue=${averageDailyInvoicesProfit},avgProfitTarget=${averageDailyInvoicesProfitTarget},targetAchieved=${targetAchievedInvoices},graphDiv='graph_div_invoices',totalValueGraphTop=${salesInvoicedMTD},targetValueGraphTop=${salesInvoicedTargetMonthly},percentageOfTargetGraphTop=${targetAchievedInvoicesMTD},runRateGraphTop=${salesAvgInvoicedMTD},titleGraphTop='Invoices vs Target - Month to-Date',totalTitleGrapghTop='Actual To-date',targetTitleGrapghTop='Target this month')"> </div>
                       </div>   
                   </div>
                 </div>
@@ -71,34 +71,34 @@
   var salesInvoiceTargets = /*[[${salesInvoiceTargets}]]*/ [];
   
   var salesOrderTargetArr = [];
-  salesOrderTargetArr.push(["Date","Actual","Target","Target Avg"]);
+  salesOrderTargetArr.push(["Date","Actual","Total","Target","Daily Target"]);
   if(salesOrderTargets.length == 0)
   {
-    salesOrderTargetArr.push(["0",0,0,0]);
+    salesOrderTargetArr.push(["0",0,0,0,0]);
   }
   for (i = 0; i < salesOrderTargets.length; i++) {
-    salesOrderTargetArr.push(['Day '+(i+1),parseFloat(salesOrderTargets[i].total.toFixed(2)),parseFloat(salesOrderTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesOrderTargets[i].totalTarget.toFixed(2))]);
+    salesOrderTargetArr.push(['Day '+(i+1),parseFloat(salesOrderTargets[i].total.toFixed(2)),parseFloat(salesOrderTargets[i].cumulativeTotal.toFixed(2)),parseFloat(salesOrderTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesOrderTargets[i].totalTarget.toFixed(2))]);
   }
   console.log('salesOrderTargetArr-->'+salesOrderTargetArr);
   var salesQuoteTargetArr = [];
-  salesQuoteTargetArr.push(["Date","Actual","Target","Target Avg"]);
+  salesQuoteTargetArr.push(["Date","Actual","Total","Target","Daily Target"]);
   if(salesQuoteTargets.length == 0)
   {
-    salesQuoteTargetArr.push(["0",0,0,0]);
+    salesQuoteTargetArr.push(["0",0,0,0,0]);
   }
   for (i = 0; i < salesQuoteTargets.length; i++) {
-    salesQuoteTargetArr.push(['Day '+(i+1),parseFloat(salesQuoteTargets[i].total.toFixed(2)),parseFloat(salesQuoteTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesQuoteTargets[i].totalTarget.toFixed(2))]);
+    salesQuoteTargetArr.push(['Day '+(i+1),parseFloat(salesQuoteTargets[i].total.toFixed(2)),parseFloat(salesQuoteTargets[i].cumulativeTotal.toFixed(2)),parseFloat(salesQuoteTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesQuoteTargets[i].totalTarget.toFixed(2))]);
   }
   console.log('salesQuoteTargetArr-->'+salesQuoteTargetArr);
 
   var salesInvoiceTargetArr = [];
-  salesInvoiceTargetArr.push(["Date","Actual","Target","Target Avg"]);
+  salesInvoiceTargetArr.push(["Date","Actual","Total","Target","Daily Target"]);
   if(salesInvoiceTargets.length == 0)
   {
-    salesInvoiceTargetArr.push(["0",0,0,0]);
+    salesInvoiceTargetArr.push(["0",0,0,0,0]);
   }
   for (i = 0; i < salesInvoiceTargets.length; i++) {
-    salesInvoiceTargetArr.push(['Day '+(i+1),parseFloat(salesInvoiceTargets[i].total.toFixed(2)),parseFloat(salesInvoiceTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesInvoiceTargets[i].totalTarget.toFixed(2))]);
+    salesInvoiceTargetArr.push(['Day '+(i+1),parseFloat(salesInvoiceTargets[i].total.toFixed(2)),parseFloat(salesInvoiceTargets[i].cumulativeTotal.toFixed(2)),parseFloat(salesInvoiceTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesInvoiceTargets[i].totalTarget.toFixed(2))]);
   }
   console.log('salesInvoiceTargetArr-->'+salesInvoiceTargetArr);
 /*]]>*/
@@ -184,7 +184,7 @@
           },
           hAxis: {title: 'Date'},
           seriesType: 'bars',
-          series: {0: {targetAxisIndex: 0,color : '#0b4119'},1: {targetAxisIndex: 1,type: 'area',color : '#92edaa'},2: {type: 'line',color : 'red'}}
+          series: {0: {targetAxisIndex: 0,color : '#0b4119'},1: {targetAxisIndex: 1,type: 'area',color : '#3BE5A7'},2: {targetAxisIndex: 1,type: 'area',color : '#92edaa'},3: {type: 'line',color : 'red'}}
         };
         var graphInvoices = new google.visualization.ComboChart(graph_div_invoices);
         graphInvoices.draw(dataGraphInvoices, dataGraphInvoicesOptions);
@@ -202,7 +202,7 @@
           },
           hAxis: {title: 'Date'},
           seriesType: 'bars',
-          series: {0: {targetAxisIndex: 0,color : '#f9ae06'},1: {targetAxisIndex: 1,type: 'area',color : '#fff67e'},2: {type: 'line',color : 'red'}}
+          series: {0: {targetAxisIndex: 0,color : '#f9ae06'},1: {targetAxisIndex: 1,type: 'area',color : '#D38919'},2: {targetAxisIndex: 1,type: 'area',color : '#fff67e'},3: {type: 'line',color : 'red'}}
         };
         var graphOrders = new google.visualization.ComboChart(graph_div_orders);
         graphOrders.draw(dataGraphOrders, dataGraphOrdersOptions);
@@ -220,7 +220,7 @@
           },
           hAxis: {title: 'Date'},
           seriesType: 'bars',
-          series: {0: {targetAxisIndex: 0,color : '#00bfff'},1: {targetAxisIndex: 1,type: 'area',color : '#ff85e6'},2: {type: 'line',color : 'red'}}
+          series: {0: {targetAxisIndex: 0,color : '#00bfff'},1: {targetAxisIndex: 1,type: 'area',color : '#208C4B'},2: {targetAxisIndex: 1,type: 'area',color : '#ff85e6'},3: {type: 'line',color : 'red'}}
         };
         var graphQuotes = new google.visualization.ComboChart(graph_div_quotes);
         graphQuotes.draw(dataGraphQuotes, dataGraphQuotesOptions);
