--- a/src/main/resources/templates/admin/dashboardCardLayout.html
+++ b/src/main/resources/templates/admin/dashboardCardLayout.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<div class="card mb-4 shadow-sm" th:fragment="cardFields(isFullScreen,cardTitle,guageDiv,totalValue, totalStyle,targetValue,targetStyle,qtyValue, qtyTarget,avgValue,avgTarget,avgProfitValue,avgProfitTarget,targetAchieved,graphDiv,totalValueGraphTop,targetValueGraphTop,percentageOfTargetGraphTop,runRateGraphTop,titleGraphTop)">
+<div class="card mb-4 shadow-sm" th:fragment="cardFields(isFullScreen,cardTitle,guageDiv,totalValue, totalStyle,targetValue,targetStyle,qtyValue, qtyTarget,avgValue,avgTarget,avgProfitValue,avgProfitTarget,targetAchieved,graphDiv,totalValueGraphTop,targetValueGraphTop,percentageOfTargetGraphTop,runRateGraphTop,titleGraphTop,totalTitleGrapghTop,targetTitleGrapghTop)">
     <div class="card-header h3"  th:text="${cardTitle}"></div>
         <div class="card-body d-flex justify-content-center" th:id="${guageDiv}"></div>
         <th:block th:if=${!isFullScreen}>
@@ -58,11 +58,11 @@
       <div class="card mt-3 mx-3 my-3">
       <th:block th:if=${!isFullScreen}>
        <div class="d-flex justify-content-center">
-        <button type="button" class="col-md-5 btn btn-sm btn-outline-primary ml-1 mr-5 mt-3 text-left border-0" th:title="${'Target : $' + #numbers.formatDecimal(targetValueGraphTop, 1, 'COMMA', 0, 'POINT')}"><small><strong><span th:text="${'Target : $' + #numbers.formatDecimal(targetValueGraphTop, 1, 'COMMA', 0, 'POINT')}"></span></strong></small></button>
+        <button type="button" class="col-md-5 btn btn-sm btn-outline-primary ml-1 mr-5 mt-3 text-left border-0" th:title="${targetTitleGrapghTop +' : $' + #numbers.formatDecimal(targetValueGraphTop, 1, 'COMMA', 0, 'POINT')}"><small><strong><span th:text="${targetTitleGrapghTop +' : $' + #numbers.formatDecimal(targetValueGraphTop, 1, 'COMMA', 0, 'POINT')}"></span></strong></small></button>
         <button type="button" class="col-md-5 btn btn-outline-success btn-sm text-left border-0 mt-3" th:title="${'Run Rate : $' + #numbers.formatDecimal(runRateGraphTop, 1, 'COMMA', 0, 'POINT')}"><small><strong><span th:text="${'Run Rate : $' + #numbers.formatDecimal(runRateGraphTop, 1, 'COMMA', 0, 'POINT')}"></span></strong></small></button>
       </div>
       <div class="d-flex justify-content-center mt-1">
-        <button type="button" class="col-md-5 btn btn-sm btn-outline-danger ml-1 mr-5 text-left border-0" th:title="${'Total Todate : $' + #numbers.formatDecimal(totalValueGraphTop, 1, 'COMMA', 0, 'POINT')}"><small><strong><span  th:text="${'Total To-date : $' + #numbers.formatDecimal(totalValueGraphTop, 1, 'COMMA', 0, 'POINT')}"></span></strong></small></button>
+        <button type="button" class="col-md-5 btn btn-sm btn-outline-danger ml-1 mr-5 text-left border-0" th:title="${totalTitleGrapghTop +' : $' + #numbers.formatDecimal(totalValueGraphTop, 1, 'COMMA', 0, 'POINT')}"><small><strong><span  th:text="${totalTitleGrapghTop +' : $' + #numbers.formatDecimal(totalValueGraphTop, 1, 'COMMA', 0, 'POINT')}"></span></strong></small></button>
         <button type="button" class="col-md-5 btn btn-outline-info btn-sm text-left border-0" th:title="${'% of Target : $' + #numbers.formatDecimal(percentageOfTargetGraphTop, 1, 'COMMA', 0, 'POINT')}"><small><strong><span th:text="${'% of Target : ' + #numbers.formatDecimal(percentageOfTargetGraphTop, 1, 'COMMA', 0, 'POINT')+'%'}"></span></strong></small></button>
         </div>
       </th:block>
