Last 12 months statistics

--- a/src/main/resources/templates/admin/chartMonthToDate.html
+++ b/src/main/resources/templates/admin/chartMonthToDate.html
@@ -183,7 +183,7 @@
           },
           hAxis: {title: 'Date'},
           seriesType: 'bars',
-          series: {0: {targetAxisIndex: 0,color : '#0b4119'},1: {targetAxisIndex: 1,type: 'area',color : '#3BE5A7'},2: {targetAxisIndex: 1,type: 'area',color : '#92edaa'},3: {type: 'line',color : 'red'}}
+          series: {0: {targetAxisIndex: 0,color : '#0b4119'},1: {targetAxisIndex: 1,type: 'area',color : '#0b4119'},2: {targetAxisIndex: 1,type: 'area',color : '#92edaa'},3: {type: 'line',color : 'red'}}
         };
         var graphInvoices = new google.visualization.ComboChart(graph_div_invoices);
         graphInvoices.draw(dataGraphInvoices, dataGraphInvoicesOptions);
@@ -201,7 +201,7 @@
           },
           hAxis: {title: 'Date'},
           seriesType: 'bars',
-          series: {0: {targetAxisIndex: 0,color : '#f9ae06'},1: {targetAxisIndex: 1,type: 'area',color : '#D38919'},2: {targetAxisIndex: 1,type: 'area',color : '#fff67e'},3: {type: 'line',color : 'red'}}
+          series: {0: {targetAxisIndex: 0,color : '#f9ae06'},1: {targetAxisIndex: 1,type: 'area',color : '#f9ae06'},2: {targetAxisIndex: 1,type: 'area',color : '#fff67e'},3: {type: 'line',color : 'red'}}
         };
         var graphOrders = new google.visualization.ComboChart(graph_div_orders);
         graphOrders.draw(dataGraphOrders, dataGraphOrdersOptions);
@@ -219,7 +219,7 @@
           },
           hAxis: {title: 'Date'},
           seriesType: 'bars',
-          series: {0: {targetAxisIndex: 0,color : '#00bfff'},1: {targetAxisIndex: 1,type: 'area',color : '#208C4B'},2: {targetAxisIndex: 1,type: 'area',color : '#ff85e6'},3: {type: 'line',color : 'red'}}
+          series: {0: {targetAxisIndex: 0,color : '#00bfff'},1: {targetAxisIndex: 1,type: 'area',color : '#00bfff'},2: {targetAxisIndex: 1,type: 'area',color : '#ff85e6'},3: {type: 'line',color : 'red'}}
         };
         var graphQuotes = new google.visualization.ComboChart(graph_div_quotes);
         graphQuotes.draw(dataGraphQuotes, dataGraphQuotesOptions);
