--- a/src/main/resources/templates/admin/chartLastMonth.html
+++ b/src/main/resources/templates/admin/chartLastMonth.html
@@ -70,34 +70,34 @@
   var salesInvoiceTargets = /*[[${salesInvoiceTargets}]]*/ [];
   
   var salesOrderTargetArr = [];
-  salesOrderTargetArr.push(["Date","Actual","Target","Monthly Target"]);
+  salesOrderTargetArr.push(["Year/Month","Actual","Target","Monthly Target"]);
   if(salesOrderTargets.length == 0)
   {
     salesOrderTargetArr.push(["0",0,0,0]);
   }
   for (i = 0; i < salesOrderTargets.length; i++) {
-    salesOrderTargetArr.push([salesOrderTargets[i].date.split("T")[0].split("-")[2]+'/'+salesOrderTargets[i].date.split("T")[0].split("-")[1],parseFloat(salesOrderTargets[i].total.toFixed(2)),parseFloat(salesOrderTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesOrderTargets[i].totalTarget.toFixed(2))]);
+    salesOrderTargetArr.push([salesOrderTargets[i].year+'/'+salesOrderTargets[i].periodNo,parseFloat(salesOrderTargets[i].total.toFixed(2)),parseFloat(salesOrderTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesOrderTargets[i].totalTarget.toFixed(2))]);
   }
   console.log('salesOrderTargetArr-->'+salesOrderTargetArr);
   var salesQuoteTargetArr = [];
-  salesQuoteTargetArr.push(["Date","Actual","Target","Monthly Target"]);
+  salesQuoteTargetArr.push(["Year/Month","Actual","Target","Monthly Target"]);
   if(salesQuoteTargets.length == 0)
   {
     salesQuoteTargetArr.push(["0",0,0,0]);
   }
   for (i = 0; i < salesQuoteTargets.length; i++) {
-    salesQuoteTargetArr.push([salesQuoteTargets[i].date.split("T")[0].split("-")[2]+'/'+salesQuoteTargets[i].date.split("T")[0].split("-")[1],parseFloat(salesQuoteTargets[i].total.toFixed(2)),parseFloat(salesQuoteTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesQuoteTargets[i].totalTarget.toFixed(2))]);
+    salesQuoteTargetArr.push([salesQuoteTargets[i].year+'/'+salesQuoteTargets[i].periodNo,parseFloat(salesQuoteTargets[i].total.toFixed(2)),parseFloat(salesQuoteTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesQuoteTargets[i].totalTarget.toFixed(2))]);
   }
   console.log('salesQuoteTargetArr-->'+salesQuoteTargetArr);
 
   var salesInvoiceTargetArr = [];
-  salesInvoiceTargetArr.push(["Date","Actual","Target","Monthly Target"]);
+  salesInvoiceTargetArr.push(["Year/Month","Actual","Target","Monthly Target"]);
   if(salesInvoiceTargets.length == 0)
   {
     salesInvoiceTargetArr.push(["0",0,0,0]);
   }
   for (i = 0; i < salesInvoiceTargets.length; i++) {
-    salesInvoiceTargetArr.push([salesInvoiceTargets[i].date.split("T")[0].split("-")[2]+'/'+salesInvoiceTargets[i].date.split("T")[0].split("-")[1],parseFloat(salesInvoiceTargets[i].total.toFixed(2)),parseFloat(salesInvoiceTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesInvoiceTargets[i].totalTarget.toFixed(2))]);
+    salesInvoiceTargetArr.push([salesInvoiceTargets[i].year+'/'+salesInvoiceTargets[i].periodNo,parseFloat(salesInvoiceTargets[i].total.toFixed(2)),parseFloat(salesInvoiceTargets[i].cumulativeTarget.toFixed(2)),parseFloat(salesInvoiceTargets[i].totalTarget.toFixed(2))]);
   }
   console.log('salesInvoiceTargetArr-->'+salesInvoiceTargetArr);
 
@@ -185,7 +185,7 @@
           },
           hAxis: {title: 'Date'},
           seriesType: 'bars',
-          series: {0: {targetAxisIndex: 0,color : '#0b4119'},1: {targetAxisIndex: 1,type: 'area',color : '#92edaa'},2: {type: 'line',color : 'red'}}
+          series: {0: {targetAxisIndex: 0,color : '#0b4119'},1: {targetAxisIndex: 1,type: 'area',color : '#0b4119'},2: {type: 'line',color : 'red'}}
         };
         var graphInvoices = new google.visualization.ComboChart(graph_div_invoices);
         graphInvoices.draw(dataGraphInvoices, dataGraphInvoicesOptions);
@@ -204,7 +204,7 @@
           },
           hAxis: {title: 'Date'},
           seriesType: 'bars',
-          series: {0: {targetAxisIndex: 0,color : '#f9ae06'},1: {targetAxisIndex: 1,type: 'area',color : '#fff67e'},2: {type: 'line',color : 'red'}}
+          series: {0: {targetAxisIndex: 0,color : '#f9ae06'},1: {targetAxisIndex: 1,type: 'area',color : '#f9ae06'},2: {type: 'line',color : 'red'}}
         };
         var graphOrders = new google.visualization.ComboChart(graph_div_orders);
         graphOrders.draw(dataGraphOrders, dataGraphOrdersOptions);
@@ -223,7 +223,7 @@
           },
           hAxis: {title: 'Date'},
           seriesType: 'bars',
-          series: {0: {targetAxisIndex: 0,color : '#00bfff'},1: {targetAxisIndex: 1,type: 'area',color : '#ff85e6'},2: {type: 'line',color : 'red'}}
+          series: {0: {targetAxisIndex: 0,color : '#00bfff'},1: {targetAxisIndex: 1,type: 'area',color : '#00bfff'},2: {type: 'line',color : 'red'}}
         };
         var graphQuotes = new google.visualization.ComboChart(graph_div_quotes);
         graphQuotes.draw(dataGraphQuotes, dataGraphQuotesOptions);
