--- a/src/main/resources/templates/admin/chartMonthToDate.html
+++ b/src/main/resources/templates/admin/chartMonthToDate.html
@@ -181,7 +181,7 @@
           0: {title: 'Actual($)'},
           1: {title: 'Target($)'}
           },
-          hAxis: {title: 'Date'},
+          hAxis: {title: 'Year/Month'},
           seriesType: 'bars',
           series: {0: {targetAxisIndex: 0,color : '#0b4119'},1: {targetAxisIndex: 1,type: 'area',color : '#0b4119'},2: {targetAxisIndex: 1,type: 'area',color : '#92edaa'},3: {type: 'line',color : 'red'}}
         };
@@ -199,7 +199,7 @@
           0: {title: 'Actual($)'},
           1: {title: 'Target($)'}
           },
-          hAxis: {title: 'Date'},
+          hAxis: {title: 'Year/Month'},
           seriesType: 'bars',
           series: {0: {targetAxisIndex: 0,color : '#f9ae06'},1: {targetAxisIndex: 1,type: 'area',color : '#f9ae06'},2: {targetAxisIndex: 1,type: 'area',color : '#fff67e'},3: {type: 'line',color : 'red'}}
         };
@@ -217,7 +217,7 @@
           0: {title: 'Actual($)'},
           1: {title: 'Target($)'}
           },
-          hAxis: {title: 'Date'},
+          hAxis: {title: 'Year/Month'},
           seriesType: 'bars',
           series: {0: {targetAxisIndex: 0,color : '#00bfff'},1: {targetAxisIndex: 1,type: 'area',color : '#00bfff'},2: {targetAxisIndex: 1,type: 'area',color : '#ff85e6'},3: {type: 'line',color : 'red'}}
         };
