--- a/src/main/resources/templates/admin/chartToday.html
+++ b/src/main/resources/templates/admin/chartToday.html
@@ -41,13 +41,42 @@
             </main>
       </div>
   </div>
-  
-        <!-- Footer -->
+  <div class="modal fade" id="expandModal" tabindex="-1" role="dialog" aria-labelledby="expandModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="expandModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div> 
+          <!-- Footer -->
 <footer class="footer mt-auto py-3">
   <div th:replace="footerLayout :: footer"> </div>
 </footer>
     <script th:inline="javascript">
-  
+  $('#expandModal').on('show.bs.modal', function (e) {
+
+var button = $(e.relatedTarget);
+var modal = $(this);
+
+// load content from HTML string
+//modal.find('.modal-body').html("Nice modal body baby...");
+
+// or, load content from value of data-remote url
+modal.find('.modal-body').load(button.data("remote"));
+
+});
   /*<![CDATA[*/
 
   var salesOrderedDaily = /*[[${salesOrderedDaily}]]*/ '0';
@@ -113,7 +142,7 @@
         ]);
 
     var optionsQuotes = {
-          width: 800,
+          width: 700,
           height: 220,
           redColor:'#00bfff',
           redFrom: 0,
