--- a/src/main/resources/templates/headerLayout.html
+++ b/src/main/resources/templates/headerLayout.html
@@ -8,7 +8,7 @@
     <a class="navbar-brand" href="#">
         <a class="nav-link text-info"  th:href="@{__${#strings.replace(#httpServletRequest.requestURI,'admin','screen')}__}"><i class="fa fa-expand"></i>Full Screen</a>
         <a class="nav-link text-info"  th:href="@{__${#httpServletRequest.requestURI}__}"><i class="fa fa-retweet"></i>Reload</a>
-        <a class="nav-link text-info" href="/logout"><i class="fas fa-sign-out-alt"></i>Logout</a>
+        <a class="nav-link text-info" href="/logout"><i class="fas fa-sign-out-alt"></i>Logout1</a>
         <span class="menu-collapsed"></span>
     </a>
 </th:block>
