--- a/src/main/resources/templates/admin/chartByDateRange.html
+++ b/src/main/resources/templates/admin/chartByDateRange.html
@@ -3,13 +3,12 @@
 <div th:replace="headLayout :: head"></div>
   <body>
     <header>
-      <!-- Bootstrap NavBar -->
-      <div th:replace="headerLayout :: header(isFullScreen=${isFullScreen})"> </div>
+      
   </header>
   <div class="container-fluid">
     <div class="row">
       <th:block th:if=${!isFullScreen}>
-      <div th:replace="sideBarMenuLayout :: sideBarMenu(homeListClass='nav-item',todayListClass='nav-item',thisMonthListClass='nav-item',lastMonthListClass='nav-item',last3MonthsListClass='nav-item',byDateRangeListClass='nav-item bg-info',homeLinkClass='nav-link',todayLinkClass='nav-link',thisMonthLinkClass='nav-link',lastMonthLinkClass='nav-link',last3MonthsLinkClass='nav-link',byDateRangeLinkClass='nav-link text-warning')"></div>
+      <div th:replace="sideBarMenuLayout :: sideBarMenu(homeListClass='nav-item',todayListClass='nav-item',thisMonthListClass='nav-item',lastMonthListClass='nav-item',last3MonthsListClass='nav-item',byDateRangeListClass='nav-item',homeLinkClass='nav-link',todayLinkClass='nav-link',thisMonthLinkClass='nav-link',lastMonthLinkClass='nav-link',last3MonthsLinkClass='nav-link',byDateRangeLinkClass='nav-link text-danger')"></div>
     </th:block>
             <main id="mainContent" role="main" th:class="${isFullScreen?'col-md-12 ml-sm-auto col-lg-12 px-md-1':'col-md-9 ml-sm-auto col-lg-10 px-md-1'}">
               <div class="col-md-12">
