--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -25,12 +25,11 @@
     <header>
         <!-- Bootstrap NavBar -->
     <!-- Bootstrap NavBar -->
-    <div th:replace="headerLayout :: header(isFullScreen=${isFullScreen})"> </div>
     </header>
     <div class="container-fluid">
         <div class="row">
             <th:block th:if=${!isFullScreen}>
-          <div th:replace="sideBarMenuLayout :: sideBarMenu(homeListClass='nav-item bg-info',todayListClass='nav-item',thisMonthListClass='nav-item',lastMonthListClass='nav-item',last3MonthsListClass='nav-item',homeLinkClass='nav-link text-warning',todayLinkClass='nav-link',thisMonthLinkClass='nav-link',lastMonthLinkClass='nav-link',last3MonthsLinkClass='nav-link')"> </div>
+          <div th:replace="sideBarMenuLayout :: sideBarMenu(homeListClass='nav-item',todayListClass='nav-item',thisMonthListClass='nav-item',lastMonthListClass='nav-item',last3MonthsListClass='nav-item',homeLinkClass='nav-link text-danger',todayLinkClass='nav-link',thisMonthLinkClass='nav-link',lastMonthLinkClass='nav-link',last3MonthsLinkClass='nav-link')"> </div>
           </th:block>
                 <main id="mainContent" role="main" th:class="${isFullScreen?'col-md-12 ml-sm-auto col-lg-12 px-md-1':'col-md-9 ml-sm-auto col-lg-10 px-md-1'}">
                   <div class="col-md-12">
