--- a/src/main/resources/templates/sideBarMenuLayout.html
+++ b/src/main/resources/templates/sideBarMenuLayout.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-dark collapse" th:fragment="sideBarMenu(homeListClass,todayListClass,thisMonthListClass,lastMonthListClass,last3MonthsListClass,byDateRangeListClass,homeLinkClass,todayLinkClass,thisMonthLinkClass,lastMonthLinkClass,last3MonthsLinkClass,byDateRangeLinkClass)">
-    <div class="sidebar-sticky pt-3">
-      <ul class="nav flex-column">
-        <li th:class="${homeListClass}">
-          <a th:class="${homeLinkClass}" th:href="@{/admin/home}" >
-            <span class="fas fa-home fa-fw mr-3"></span>
-            Home
-          </a>
-        </li>
-        <div class="dropdown-divider"></div>
-      </ul>
+<nav id="sidebarMenu" class="border col-md-3 col-lg-2 d-md-block bg-transparent collapse"
+  th:fragment="sideBarMenu(homeListClass,todayListClass,thisMonthListClass,lastMonthListClass,last3MonthsListClass,byDateRangeListClass,homeLinkClass,todayLinkClass,thisMonthLinkClass,lastMonthLinkClass,last3MonthsLinkClass,byDateRangeLinkClass)">
+    <div class="sidebar-sticky">
       <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
         <span>Dashboards</span>
         <a class="d-flex align-items-center text-muted text-warning" href="#" onclick="javascript:hideSideBar()" aria-label="Add a new report">
-          <span class="fa fa-arrow-left fa-fw mr-3 text-warning"></span>
+          <span class="fa fa-arrow-left fa-fw mr-3 text-danger"></span>
         </a>
       </h6>
       <ul class="nav flex-column mb-2">
+        <li th:class="${homeListClass}">
+          <a th:class="${homeLinkClass}" th:href="@{/admin/home}">
+            <span class="fas fa-home fa-fw mr-3"></span>
+            Overview
+          </a>
+        </li>
         <li th:class="${todayListClass}">
           <a th:class="${todayLinkClass}" th:href="@{/admin/chartToday}">
             <span class="fas fa-chart-pie fa-fw mr-3"></span>
